added keynote speaker info

--- a/program.html
+++ b/program.html
@@ -5,9 +5,43 @@ layout: page
 show_sidebar: false
 ---
 
-<h1>Keynote Speakers</h1>
+<h1>Keynote Speaker</h1>
 
-<p>TBD</p>
+<div class="columns box">
+    <div class="column is-6">
+        <div class="column">
+            {% include image-modal.html ratio="is-16by9" link="../img/sarah.png" alt="Sarah Schwettmann" %}
+        </div>
+        <div class="column">
+            <p class="title">Sarah Schwettmann</p>
+            <p class="subtitle"><a href="http://www.cogconfluence.com">http://www.cogconfluence.com</a></p>
+            <h3>AI Models as a Shared Creative Resource</h3>
+            <h4><em>The Human Use of New Machines</em></h4>
+            <p>This talk is born out of a series of collaborations with deep generative models that capture human
+                creativity at different scales. These tools hold a beautiful promise: within reach is the ability for
+                anyone to collaborate with executable models of individual and collective cultural history, on a
+                timeline allowing experimentation and rapid evolution in the present. To fully realize this future, we
+                need modes of multiplexing creation, across platforms and processes, that are understood as a
+                magnification of creative identity rather than a dilution. How can we establish infrastructure and norms
+                around contributing to shared models, and around the idea of models as a shared resource? At their best,
+                such models both facilitate co-creation and provide a context for interpreting the structure underlying
+                human creativity and perception &mdash; a feedback loop befitting a 21st century articulation of
+                iterative creativity.</p>
+            <h4>Bio</h4>
+            <p>Sarah Schwettmann is a neuroscientist and machine learning researcher at MIT CSAIL. She completed her PhD
+                in Brain and Cognitive Sciences at MIT, where she was an NSF Fellow. Her work investigates generalizable
+                representations for vision in biological and artificial neural networks. She is broadly interested in
+                creativity underlying the human relationship to the world: from the brain's fundamentally constructive
+                role in sensory perception to the explicit creation of experiential worlds in art. Sarah designed and
+                teaches MIT's first course on Vision in Art and Neuroscience, and leads research efforts in the MIT
+                Museum Studio.</p>
+            <p>Sarah has translated her work into a wide range of collaborations, including with The Metropolitan Museum
+                of Art, MIT Open Learning, Microsoft Research, the Knowledge Futures Group, MIT Quest for Intelligence,
+                MFA Boston, Harvard's Berkman Klein Center for Internet and Society, and the MIT Museum. Prior to MIT
+                she lived in Houston, Texas, where her work was in theoretical neuroscience.</p>
+        </div>
+    </div>
+</div>
 
 <h1>Workshop Program</h1>
 
