--- a/program.html
+++ b/program.html
@@ -11,6 +11,8 @@ show_sidebar: false
     <div class="column is-6">
         <div class="column">
             {% include image-modal.html ratio="is-16by9" link="../img/sarah.png" alt="Sarah Schwettmann" %}
+            
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/HlMiUBTQJl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="column">
             <p class="title">Sarah Schwettmann</p>
